登录退出 用户列表

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
   <link href="https://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
   <!--<link rel="stylesheet" href="node_modules/amazeui-touch/dist/amazeui.touch.min.css"/>-->
   <link rel="shortcut icon" href="./assets/images/favicon.ico">
-  <title>荟医</title>
+  <title>后台管理需求</title>
 </head>
 <body>
 <div id="app"></div>
